--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   flutter_calendar_carousel: ^2.4.2
   flutter_rating_bar: ^4.0.1
   flutter_launcher_icons: ^0.13.1
+  firebase_core: ^2.23.0
+  firebase_auth: ^4.14.1
+  cloud_firestore: ^4.13.2
 
 dev_dependencies:
   flutter_test:
